--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^9.22.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.0",
